clapi_macros/test_suite/tests/ui/fail/invalid_option_value/invalid_option_min.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_min.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `min` is expected to be an integer literal
